# mnb-algorithms

./: .gitignore  CMakeLists.txt  compile.sh  input-cyk2.json  input-pda2cfg1.json  input-pda2cfg2.json  main.cpp  run.sh
src/: CFG.cpp  CFG.h  PDA.cpp  PDA.h  StatePDA.cpp  StatePDA.h  algorithms.cpp  algorithms.h
testfiles/: cfg1.json  example1.json
